--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,12 @@
  *= require_self
  *= require_tree .
  */
+
+ div.alert {
+ 	border: 2px solid #bbb;
+ 	padding: 10px;
+ }
+
+div.flash.success { border: 2px solid purple; color: purple;}
+div.flash.error { border: 2px solid orange; color: orange;}
+div.flash.notice { border: 2px solid blue; color: blue;}
