--- a/app/views/todo_items/index.html.erb
+++ b/app/views/todo_items/index.html.erb
@@ -1,9 +1,13 @@
 <h1><%= @todo_list.title %></h1>
-<p>Find me in app/views/todo_items/index.html.erb</p>
 
 <ul class="todo_items">
 	<% @todo_list.todo_items.each do |todo_item| %>
-		<li><%= todo_item.content %></li>
+		<li id="<%= dom_id(todo_item) %>">
+			<%= todo_item.content %>
+			<%= link_to "Edit", edit_todo_list_todo_item_path(todo_item) %>
+			<%= link_to "Delete", todo_list_todo_item_path(todo_item), method: :delete,
+				data: { confirm: "Are you sure?" } %>
+		</li>
 	<% end %>
 </ul>
 
