--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <%= nav_bar :fixed => :top, :brand => "busybee", :responsive => true do %>
     <%= menu_group do %>
         <%= menu_item "New List", new_todo_list_path %>
-        <%= menu_item "Todo Lists", todo_lists_path %>
+        <%= menu_item "href/", todo_lists_path %>
     <% end %>
 <% end %>
 
@@ -22,5 +22,6 @@
 
 <%= yield %>
 
+<%= link_to "New Todo list", new_todo_list_path %>
 </body>
 </html>
